# code-memory

./: .gitignore  .mcp.json.example  CLAUDE.md  api_types.py  db.py  doc_parser.py  git_search.py  logging_config.py  parser.py  pyproject.toml  queries.py  server.json  server.py  test_pydantic.py  validation.py
scripts/: download_model.py
tests/: test_validation.py
